# gtk-todo-demo

./: Cargo.toml  Makefile  README  build.rs  com.paulrouget.todo.gschema.xml
resources/: collection.ui  resources.gresource.xml  style.css  window.ui
src/: main.rs
src/collection/: imp.rs  mod.rs  ui.rs
src/window/: imp.rs  mod.rs
