[package]
name = "gtk-todo-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
gtk = { version = "*", package = "gtk4" }
adw = { version = "0.2.0-alpha.2", package = "libadwaita" }
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xshell = "0.2"
dirs = "4.0"
walkdir = "2.3"

[build-dependencies]
glib-build-tools = "*"
